// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArticleHero > collapses authors past the cap into a remainder 1`] = `
<div
  class="relative flex flex-col gap-2 md:-mx-10 lg:-mx-32 xl:-mx-44"
>
  <h1
    class="mt-6"
  >
    Test Article
  </h1>
  <div
    class="flex flex-col gap-2 md:flex-row md:items-center md:gap-8"
  >
    <div
      class="flex flex-1 items-start justify-between gap-2 md:contents"
    >
      <div
        class="dark:text-brand-high-contrast text-brand flex flex-1 flex-wrap items-center gap-2 font-serif font-bold underline-offset-4 md:order-1"
      >
        <div
          class="group/avatar-group *:data-[slot=avatar]:ring-background flex -space-x-2 *:data-[slot=avatar]:ring-2 *:[transition:margin-inline-end_50ms_ease-out] hover:space-x-1"
          data-slot="avatar-group"
        >
          <a
            aria-hidden="true"
            class="group/avatar after:border-border relative flex size-8 shrink-0 overflow-hidden rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:mix-blend-darken data-[size=2xl]:size-32 data-[size=lg]:size-10 data-[size=sm]:size-6 data-[size=xl]:size-24 dark:after:mix-blend-lighten"
            data-size="sm"
            data-slot="avatar"
            href="/authors/alice-smith"
            style="z-index: 3;"
            tabindex="-1"
          >
            <span
              class="bg-muted text-muted-foreground flex size-full items-center justify-center rounded-full text-sm group-data-[size=sm]/avatar:text-xs"
              data-slot="avatar-fallback"
            >
              AS
            </span>
          </a>
          <a
            aria-hidden="true"
            class="group/avatar after:border-border relative flex size-8 shrink-0 overflow-hidden rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:mix-blend-darken data-[size=2xl]:size-32 data-[size=lg]:size-10 data-[size=sm]:size-6 data-[size=xl]:size-24 dark:after:mix-blend-lighten"
            data-size="sm"
            data-slot="avatar"
            href="/authors/bob-jones"
            style="z-index: 2;"
            tabindex="-1"
          >
            <span
              class="bg-muted text-muted-foreground flex size-full items-center justify-center rounded-full text-sm group-data-[size=sm]/avatar:text-xs"
              data-slot="avatar-fallback"
            >
              BJ
            </span>
          </a>
          <a
            aria-hidden="true"
            class="group/avatar after:border-border relative flex size-8 shrink-0 overflow-hidden rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:mix-blend-darken data-[size=2xl]:size-32 data-[size=lg]:size-10 data-[size=sm]:size-6 data-[size=xl]:size-24 dark:after:mix-blend-lighten"
            data-size="sm"
            data-slot="avatar"
            href="/authors/carol-diaz"
            style="z-index: 1;"
            tabindex="-1"
          >
            <span
              class="bg-muted text-muted-foreground flex size-full items-center justify-center rounded-full text-sm group-data-[size=sm]/avatar:text-xs"
              data-slot="avatar-fallback"
            >
              CD
            </span>
          </a>
          <div
            class="bg-muted text-muted-foreground ring-background relative flex size-8 shrink-0 items-center justify-center rounded-full text-sm ring-2 group-has-data-[size=lg]/avatar-group:size-10 group-has-data-[size=sm]/avatar-group:size-6 [&>svg]:size-4 group-has-data-[size=lg]/avatar-group:[&>svg]:size-5 group-has-data-[size=sm]/avatar-group:[&>svg]:size-3"
            data-slot="avatar-group-count"
          >
            +
            3
          </div>
        </div>
        <span>
          <a
            class="hover:underline"
            href="/authors/alice-smith"
          >
            Alice Smith
          </a>
          , 
          <a
            class="hover:underline"
            href="/authors/bob-jones"
          >
            Bob Jones
          </a>
          , 
          <a
            class="hover:underline"
            href="/authors/carol-diaz"
          >
            Carol Diaz
          </a>
          , & 
          3 more
        </span>
        •
        <a
          class="hover:underline"
          href="/articles/test-article"
        >
          <time
            datetime="2024-06-01T00:00:00.000Z"
          >
            June 1, 2024
          </time>
        </a>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Share"
        class="group/button inline-flex items-center justify-center border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border-border bg-background hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 size-7 rounded-[min(var(--radius-md),12px)] in-data-[slot=button-group]:rounded-lg shrink-0 md:order-3"
        data-base-ui-click-trigger=""
        data-slot="popover-trigger"
        id="base-ui-_r_e_"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-share2 lucide-share-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="bg-border shrink-0 data-horizontal:h-px data-horizontal:w-full data-vertical:w-px data-vertical:self-stretch"
    data-orientation="horizontal"
    data-slot="separator"
    role="separator"
  />
</div>
`;

exports[`ArticleHero > joins three authors with an Oxford comma and ampersand 1`] = `
<div
  class="relative flex flex-col gap-2 md:-mx-10 lg:-mx-32 xl:-mx-44"
>
  <h1
    class="mt-6"
  >
    Test Article
  </h1>
  <div
    class="flex flex-col gap-2 md:flex-row md:items-center md:gap-8"
  >
    <div
      class="flex flex-1 items-start justify-between gap-2 md:contents"
    >
      <div
        class="dark:text-brand-high-contrast text-brand flex flex-1 flex-wrap items-center gap-2 font-serif font-bold underline-offset-4 md:order-1"
      >
        <div
          class="group/avatar-group *:data-[slot=avatar]:ring-background flex -space-x-2 *:data-[slot=avatar]:ring-2 *:[transition:margin-inline-end_50ms_ease-out] hover:space-x-1"
          data-slot="avatar-group"
        >
          <a
            aria-hidden="true"
            class="group/avatar after:border-border relative flex size-8 shrink-0 overflow-hidden rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:mix-blend-darken data-[size=2xl]:size-32 data-[size=lg]:size-10 data-[size=sm]:size-6 data-[size=xl]:size-24 dark:after:mix-blend-lighten"
            data-size="sm"
            data-slot="avatar"
            href="/authors/alice-smith"
            style="z-index: 3;"
            tabindex="-1"
          >
            <span
              class="bg-muted text-muted-foreground flex size-full items-center justify-center rounded-full text-sm group-data-[size=sm]/avatar:text-xs"
              data-slot="avatar-fallback"
            >
              AS
            </span>
          </a>
          <a
            aria-hidden="true"
            class="group/avatar after:border-border relative flex size-8 shrink-0 overflow-hidden rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:mix-blend-darken data-[size=2xl]:size-32 data-[size=lg]:size-10 data-[size=sm]:size-6 data-[size=xl]:size-24 dark:after:mix-blend-lighten"
            data-size="sm"
            data-slot="avatar"
            href="/authors/bob-jones"
            style="z-index: 2;"
            tabindex="-1"
          >
            <span
              class="bg-muted text-muted-foreground flex size-full items-center justify-center rounded-full text-sm group-data-[size=sm]/avatar:text-xs"
              data-slot="avatar-fallback"
            >
              BJ
            </span>
          </a>
          <a
            aria-hidden="true"
            class="group/avatar after:border-border relative flex size-8 shrink-0 overflow-hidden rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:mix-blend-darken data-[size=2xl]:size-32 data-[size=lg]:size-10 data-[size=sm]:size-6 data-[size=xl]:size-24 dark:after:mix-blend-lighten"
            data-size="sm"
            data-slot="avatar"
            href="/authors/carol-diaz"
            style="z-index: 1;"
            tabindex="-1"
          >
            <span
              class="bg-muted text-muted-foreground flex size-full items-center justify-center rounded-full text-sm group-data-[size=sm]/avatar:text-xs"
              data-slot="avatar-fallback"
            >
              CD
            </span>
          </a>
        </div>
        <span>
          <a
            class="hover:underline"
            href="/authors/alice-smith"
          >
            Alice Smith
          </a>
          , 
          <a
            class="hover:underline"
            href="/authors/bob-jones"
          >
            Bob Jones
          </a>
          , & 
          <a
            class="hover:underline"
            href="/authors/carol-diaz"
          >
            Carol Diaz
          </a>
        </span>
        •
        <a
          class="hover:underline"
          href="/articles/test-article"
        >
          <time
            datetime="2024-06-01T00:00:00.000Z"
          >
            June 1, 2024
          </time>
        </a>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Share"
        class="group/button inline-flex items-center justify-center border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border-border bg-background hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 size-7 rounded-[min(var(--radius-md),12px)] in-data-[slot=button-group]:rounded-lg shrink-0 md:order-3"
        data-base-ui-click-trigger=""
        data-slot="popover-trigger"
        id="base-ui-_r_8_"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-share2 lucide-share-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="bg-border shrink-0 data-horizontal:h-px data-horizontal:w-full data-vertical:w-px data-vertical:self-stretch"
    data-orientation="horizontal"
    data-slot="separator"
    role="separator"
  />
</div>
`;

exports[`ArticleHero > renders narration as numeric id (no player shown) 1`] = `
<div
  class="relative flex flex-col gap-2 md:-mx-10 lg:-mx-32 xl:-mx-44"
>
  <h1
    class="mt-6"
  >
    Test Article
  </h1>
  <div
    class="flex flex-col gap-2 md:flex-row md:items-center md:gap-8"
  >
    <div
      class="flex flex-1 items-start justify-between gap-2 md:contents"
    >
      <div
        class="dark:text-brand-high-contrast text-brand flex flex-1 flex-wrap items-center gap-2 font-serif font-bold underline-offset-4 md:order-1"
      >
        •
        <a
          class="hover:underline"
          href="/articles/test-article"
        >
          <time
            datetime="2024-06-01T00:00:00.000Z"
          >
            June 1, 2024
          </time>
        </a>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Share"
        class="group/button inline-flex items-center justify-center border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border-border bg-background hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 size-7 rounded-[min(var(--radius-md),12px)] in-data-[slot=button-group]:rounded-lg shrink-0 md:order-3"
        data-base-ui-click-trigger=""
        data-slot="popover-trigger"
        id="base-ui-_r_k_"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-share2 lucide-share-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="bg-border shrink-0 data-horizontal:h-px data-horizontal:w-full data-vertical:w-px data-vertical:self-stretch"
    data-orientation="horizontal"
    data-slot="separator"
    role="separator"
  />
</div>
`;

exports[`ArticleHero > renders narration as object (shows player) 1`] = `
<div
  class="relative flex flex-col gap-2 md:-mx-10 lg:-mx-32 xl:-mx-44"
>
  <h1
    class="mt-6"
  >
    Test Article
  </h1>
  <div
    class="flex flex-col gap-2 md:flex-row md:items-center md:gap-8"
  >
    <div
      class="flex flex-1 items-start justify-between gap-2 md:contents"
    >
      <div
        class="dark:text-brand-high-contrast text-brand flex flex-1 flex-wrap items-center gap-2 font-serif font-bold underline-offset-4 md:order-1"
      >
        •
        <a
          class="hover:underline"
          href="/articles/test-article"
        >
          <time
            datetime="2024-06-01T00:00:00.000Z"
          >
            June 1, 2024
          </time>
        </a>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Share"
        class="group/button inline-flex items-center justify-center border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border-border bg-background hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 size-7 rounded-[min(var(--radius-md),12px)] in-data-[slot=button-group]:rounded-lg shrink-0 md:order-3"
        data-base-ui-click-trigger=""
        data-slot="popover-trigger"
        id="base-ui-_r_n_"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-share2 lucide-share-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </button>
    </div>
    <div
      class="md:order-2 md:w-56 md:shrink-0"
    >
      <div
        data-testid="narration-player"
      />
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="bg-border shrink-0 data-horizontal:h-px data-horizontal:w-full data-vertical:w-px data-vertical:self-stretch"
    data-orientation="horizontal"
    data-slot="separator"
    role="separator"
  />
</div>
`;

exports[`ArticleHero > renders with hero image 1`] = `
<div
  class="relative flex flex-col gap-2 md:-mx-10 lg:-mx-32 xl:-mx-44"
>
  <div
    data-testid="media"
  />
  <h1
    class="mt-6"
  >
    Test Article
  </h1>
  <div
    class="flex flex-col gap-2 md:flex-row md:items-center md:gap-8"
  >
    <div
      class="flex flex-1 items-start justify-between gap-2 md:contents"
    >
      <div
        class="dark:text-brand-high-contrast text-brand flex flex-1 flex-wrap items-center gap-2 font-serif font-bold underline-offset-4 md:order-1"
      >
        •
        <a
          class="hover:underline"
          href="/articles/test-article"
        >
          <time
            datetime="2024-06-01T00:00:00.000Z"
          >
            June 1, 2024
          </time>
        </a>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Share"
        class="group/button inline-flex items-center justify-center border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border-border bg-background hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 size-7 rounded-[min(var(--radius-md),12px)] in-data-[slot=button-group]:rounded-lg shrink-0 md:order-3"
        data-base-ui-click-trigger=""
        data-slot="popover-trigger"
        id="base-ui-_r_h_"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-share2 lucide-share-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="bg-border shrink-0 data-horizontal:h-px data-horizontal:w-full data-vertical:w-px data-vertical:self-stretch"
    data-orientation="horizontal"
    data-slot="separator"
    role="separator"
  />
</div>
`;

exports[`ArticleHero > renders with populated authors showing avatar stack 1`] = `
<div
  class="relative flex flex-col gap-2 md:-mx-10 lg:-mx-32 xl:-mx-44"
>
  <h1
    class="mt-6"
  >
    Test Article
  </h1>
  <div
    class="flex flex-col gap-2 md:flex-row md:items-center md:gap-8"
  >
    <div
      class="flex flex-1 items-start justify-between gap-2 md:contents"
    >
      <div
        class="dark:text-brand-high-contrast text-brand flex flex-1 flex-wrap items-center gap-2 font-serif font-bold underline-offset-4 md:order-1"
      >
        <div
          class="group/avatar-group *:data-[slot=avatar]:ring-background flex -space-x-2 *:data-[slot=avatar]:ring-2 *:[transition:margin-inline-end_50ms_ease-out] hover:space-x-1"
          data-slot="avatar-group"
        >
          <a
            aria-hidden="true"
            class="group/avatar after:border-border relative flex size-8 shrink-0 overflow-hidden rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:mix-blend-darken data-[size=2xl]:size-32 data-[size=lg]:size-10 data-[size=sm]:size-6 data-[size=xl]:size-24 dark:after:mix-blend-lighten"
            data-size="sm"
            data-slot="avatar"
            href="/authors/alice-smith"
            style="z-index: 2;"
            tabindex="-1"
          >
            <span
              class="bg-muted text-muted-foreground flex size-full items-center justify-center rounded-full text-sm group-data-[size=sm]/avatar:text-xs"
              data-slot="avatar-fallback"
            >
              AS
            </span>
          </a>
          <a
            aria-hidden="true"
            class="group/avatar after:border-border relative flex size-8 shrink-0 overflow-hidden rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:mix-blend-darken data-[size=2xl]:size-32 data-[size=lg]:size-10 data-[size=sm]:size-6 data-[size=xl]:size-24 dark:after:mix-blend-lighten"
            data-size="sm"
            data-slot="avatar"
            href="/authors/bob-jones"
            style="z-index: 1;"
            tabindex="-1"
          >
            <span
              class="bg-muted text-muted-foreground flex size-full items-center justify-center rounded-full text-sm group-data-[size=sm]/avatar:text-xs"
              data-slot="avatar-fallback"
            >
              BJ
            </span>
          </a>
        </div>
        <span>
          <a
            class="hover:underline"
            href="/authors/alice-smith"
          >
            Alice Smith
          </a>
           & 
          <a
            class="hover:underline"
            href="/authors/bob-jones"
          >
            Bob Jones
          </a>
        </span>
        •
        <a
          class="hover:underline"
          href="/articles/test-article"
        >
          <time
            datetime="2024-06-01T00:00:00.000Z"
          >
            June 1, 2024
          </time>
        </a>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Share"
        class="group/button inline-flex items-center justify-center border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border-border bg-background hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 size-7 rounded-[min(var(--radius-md),12px)] in-data-[slot=button-group]:rounded-lg shrink-0 md:order-3"
        data-base-ui-click-trigger=""
        data-slot="popover-trigger"
        id="base-ui-_r_5_"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-share2 lucide-share-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="bg-border shrink-0 data-horizontal:h-px data-horizontal:w-full data-vertical:w-px data-vertical:self-stretch"
    data-orientation="horizontal"
    data-slot="separator"
    role="separator"
  />
</div>
`;

exports[`ArticleHero > renders without authors or hero image 1`] = `
<div
  class="relative flex flex-col gap-2 md:-mx-10 lg:-mx-32 xl:-mx-44"
>
  <h1
    class="mt-6"
  >
    Test Article
  </h1>
  <div
    class="flex flex-col gap-2 md:flex-row md:items-center md:gap-8"
  >
    <div
      class="flex flex-1 items-start justify-between gap-2 md:contents"
    >
      <div
        class="dark:text-brand-high-contrast text-brand flex flex-1 flex-wrap items-center gap-2 font-serif font-bold underline-offset-4 md:order-1"
      >
        •
        <a
          class="hover:underline"
          href="/articles/test-article"
        >
          <time
            datetime="2024-06-01T00:00:00.000Z"
          >
            June 1, 2024
          </time>
        </a>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Share"
        class="group/button inline-flex items-center justify-center border bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border-border bg-background hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 size-7 rounded-[min(var(--radius-md),12px)] in-data-[slot=button-group]:rounded-lg shrink-0 md:order-3"
        data-base-ui-click-trigger=""
        data-slot="popover-trigger"
        id="base-ui-_r_2_"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-share2 lucide-share-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="bg-border shrink-0 data-horizontal:h-px data-horizontal:w-full data-vertical:w-px data-vertical:self-stretch"
    data-orientation="horizontal"
    data-slot="separator"
    role="separator"
  />
</div>
`;
